--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
 
       - restore_cache:
           keys:
-            - v5-model_cache-{{ checksum "setup.py" }}
+            - v1-model_cache-{{ checksum "setup.py" }}
       
       - run:
           name: Install EVA package from GitHub repo with all dependencies
@@ -119,10 +119,11 @@ jobs:
             equal: [ TEST, << parameters.mode >> ]
           steps:
             - save_cache:
-                key: v5-model_cache-{{ checksum "setup.py" }}
+                key: v1-model_cache-{{ checksum "setup.py" }}
                 paths:
                   - /home/circleci/.cache/huggingface/
                   - /home/circleci/.cache/torch/
+                  - /home/circleci/.cache/gpt4all/
 
   Windows:
       executor: win/default
