--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,6 +158,7 @@ jobs:
         - checkout
         - run:           
             name: Install EVA package from GitHub repo and run tests
+            no_output_timeout: 30m # 30 minute timeout
             command: |
               python -m venv test_evadb
               source test_evadb/bin/activate
