--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,18 +12,18 @@ workflows:
         - Docker-Local
         - AWS
         #### UNIT TESTS
-        - Linux:
-            name: "Test | v3.8 | Linux"
-            v: "3.8"
-            mode: "COV"
-        - Linux:
-            name: "Test | v3.9 | Linux"
-            v: "3.9"
-            mode: "COV"
-        - Linux:
-            name: "Test | v3.10 | Linux"
-            v: "3.10"
-            mode: "COV"
+        # - Linux:
+        #     name: "Test | v3.8 | Linux"
+        #     v: "3.8"
+        #     mode: "COV"
+        # - Linux:
+        #     name: "Test | v3.9 | Linux"
+        #     v: "3.9"
+        #     mode: "COV"
+        # - Linux:
+        #     name: "Test | v3.10 | Linux"
+        #     v: "3.10"
+        #     mode: "COV"
         # Ray does not work on 3.11
         # https://github.com/ray-project/ray/issues/33232
         # - Linux:
@@ -31,14 +31,14 @@ workflows:
         #     v: "3.11"
         #     mode: "TEST"
         ### NOTEBOOKS
-        - Linux:
-            name: "Notebook | v3.8 | Linux"
-            v: "3.8"
-            mode: "NOTEBOOK"
-        - Linux:
-            name: "Notebook | v3.9 | Linux"
-            v: "3.9"
-            mode: "NOTEBOOK"
+        # - Linux:
+        #     name: "Notebook | v3.8 | Linux"
+        #     v: "3.8"
+        #     mode: "NOTEBOOK"
+        # - Linux:
+        #     name: "Notebook | v3.9 | Linux"
+        #     v: "3.9"
+        #     mode: "NOTEBOOK"
         - Linux:
             name: "Notebook | v3.10 | Linux"
             v: "3.10"
@@ -53,14 +53,14 @@ workflows:
             v: "3.10"
             mode: "LINTER"
         ### RAY
-        - Linux:
-            name: "Test | Ray | v3.10 | Linux"
-            v: "3.10"
-            mode: "RAY"
-        - Windows:
-            name: "Windows | v3.10"
-        - MacOS:
-           name: "MacOS | v3.10"
+        # - Linux:
+        #     name: "Test | Ray | v3.10 | Linux"
+        #     v: "3.10"
+        #     mode: "RAY"
+        # - Windows:
+        #     name: "Windows | v3.10"
+        # - MacOS:
+        #    name: "MacOS | v3.10"
         # missing Torchvision
         #- Linux:
         #    name: "Linux -  v3.11"  
