fix: Notebooks fix (#887)
1. Fixed tricky notebook bug by forcefully importing `torch` ahead of all other packages.

---------

Co-authored-by: jarulraj <arulraj@gatech.edu>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ workflows:
         #     name: "Notebook | v3.11 | Linux"
         #     v: "3.11"
         #     mode: "NOTEBOOK"
-        ### LINTER
+        ## LINTER
         - Linux:
             name: "Linter | Linux"
             v: "3.10"
