--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,60 +7,94 @@ orbs:
 workflows:
   main:
     jobs:
+        ################################
+        #### PIP
+        ################################
+        ################################
         - Pip-PyPI
         - Pip-Local
-        - Docker-Local
-        - AWS
+        ################################
         #### UNIT TESTS
-        - Linux:
-            name: "Test | v3.8 | Linux"
-            v: "3.8"
-            mode: "COV"
-        - Linux:
-            name: "Test | v3.9 | Linux"
-            v: "3.9"
-            mode: "COV"
+        ################################
+        ################################
+        #- Linux:
+        #    name: "Test | v3.8 | Linux"
+        #    v: "3.8"
+        #    mode: "TEST"
+        #    ray: "DISABLED"
+        #- Linux:
+        #    name: "Test | v3.9 | Linux"
+        #    v: "3.9"
+        #    mode: "TEST"
+        #    ray: "DISABLED"
         - Linux:
             name: "Test | v3.10 | Linux"
             v: "3.10"
-            mode: "COV"
+            mode: "TEST"
+            ray: "DISABLED"
+       - Linux:
+            name: "Test | Ray | v3.10 | Linux"
+            v: "3.10"
+            mode: "TEST"
+            ray: "ENABLED"            
         # Ray does not work on 3.11
         # https://github.com/ray-project/ray/issues/33232
         # - Linux:
         #     name: "Test | v3.11 | Linux"
         #     v: "3.11"
         #     mode: "TEST"
+        #     ray: "DISABLED"
+        ################################
         ### NOTEBOOKS
-        - Linux:
-            name: "Notebook | v3.8 | Linux"
-            v: "3.8"
-            mode: "NOTEBOOK"
-        - Linux:
-            name: "Notebook | v3.9 | Linux"
-            v: "3.9"
-            mode: "NOTEBOOK"
+        ################################
+        ################################
+        #- Linux:
+        #    name: "Notebook | v3.8 | Linux"
+        #    v: "3.8"
+        #    mode: "NOTEBOOK"
+        #    ray: "DISABLED"
+        #- Linux:
+        #    name: "Notebook | v3.9 | Linux"
+        #    v: "3.9"
+        #    mode: "NOTEBOOK"
+        #    ray: "DISABLED"
         - Linux:
             name: "Notebook | v3.10 | Linux"
             v: "3.10"
             mode: "NOTEBOOK"
+            ray: "DISABLED"
+        - Linux:
+            name: "Notebook | v3.10 | Linux"
+            v: "3.10"
+            mode: "NOTEBOOK"
+            ray: "ENABLED"            
         # - Linux:
         #     name: "Notebook | v3.11 | Linux"
         #     v: "3.11"
         #     mode: "NOTEBOOK"
+        ################################
         ## LINTER
+        ################################
+        ################################
         - Linux:
             name: "Linter | Linux"
             v: "3.10"
             mode: "LINTER"
-        ### RAY
-        - Linux:
-            name: "Test | Ray | v3.10 | Linux"
-            v: "3.10"
-            mode: "RAY"
-        - Windows:
-            name: "Windows | v3.10"
+            ray: "DISABLED"
+        ################################
+        # OTHER OPERATING SYSTEMS
+        ################################
+        ################################
+        #- Windows:
+        #    name: "Windows | v3.10"
         # - MacOS:
         #    name: "MacOS | v3.10"
+        ################################
+        # DOCKER AND CLOUD
+        ################################
+        ################################
+        #- Docker-Local
+        #- AWS
 
 jobs:
   Linux:
@@ -71,6 +105,9 @@ jobs:
       mode:
         type: string
         default: "ALL"
+      ray:
+        type: string
+        default: "DISABLED"
     resource_class: large
     docker:
       # https://circleci.com/docs/circleci-images#language-image-variants
@@ -84,23 +121,25 @@ jobs:
             - v1-model_cache-{{ checksum "setup.py" }}
       
       - run:
-          name: Install EVA package from GitHub repo with all dependencies
+          name: Install EvaDB package from GitHub repo with all dependencies
           command: |
             "python<< parameters.v >>" -m venv test_evadb
             pip install --upgrade pip
             source test_evadb/bin/activate
             pip install ".[dev]"
+            pip uninstall ray
 
-      # Enable Ray
+      # Enable Ray (update evadb.yml file and install Ray package)
       - when:
           condition:
-            equal: [ RAY, << parameters.mode >> ]
+            equal: [ ENABLED, << parameters.ray >> ]
           steps:
             - run:
                 name: Enable Ray setting in the config.yml file
                 command: |
                   source test_evadb/bin/activate
                   python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['ray'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
+                  pip install ".[dev]"
 
       - run:
           name: Test and upload coverage report to coveralls
