--- a/apps/youtube_channel_qa/requirements.txt
+++ b/apps/youtube_channel_qa/requirements.txt
@@ -1,7 +1,9 @@
 evadb>=0.2.14
 torch
+transformers
 opencv-python
+eva-decord
 openai
-pytube>=15.0.0
 youtube_transcript_api>=0.6.0
+pytube>=15.0.0
 scrapetube
