--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,11 @@ workflows:
             mode: "TEST"
             ray: "DISABLED"
         - Linux:
+            name: "Test | v3.11 | Linux"
+            v: "3.10"
+            mode: "TEST"
+            ray: "DISABLED"
+        - Linux:
             name: "Test | Ray | v3.8 | Linux"
             v: "3.8"
             mode: "TEST"
@@ -53,7 +58,7 @@ workflows:
         #     name: "Test | v3.11 | Linux"
         #     v: "3.11"
         #     mode: "TEST"
-        #     ray: "DISABLED"
+        #     ray: "ENABLED"
         ################################
         ### NOTEBOOKS
         ################################
@@ -73,6 +78,11 @@ workflows:
             v: "3.10"
             mode: "NOTEBOOK"
             ray: "DISABLED"
+        - Linux:
+            name: "Notebook | v3.11 | Linux"
+            v: "3.11"
+            mode: "NOTEBOOK"
+            ray: "DISABLED"            
         - Linux:
             name: "Notebook | Ray | v3.8 | Linux"
             v: "3.8"
