--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,7 @@ jobs:
             "python<< parameters.v >>" -m venv test_evadb
             pip install --upgrade pip
             source test_evadb/bin/activate
-            pip install ".[dev]" --skip-packages ray
+            pip install ".[dev]"
 
       # Enable Ray (update evadb.yml file and install Ray package)
       - when:
@@ -168,7 +168,7 @@ jobs:
                 command: |
                   source test_evadb/bin/activate
                   python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['ray'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
-                  pip install ".[dev]"
+                  pip install ".[ray]"
 
       - run:
           name: Test and upload coverage report to coveralls
