--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,11 @@ workflows:
             v: "3.10"
             mode: "TEST"
             ray: "DISABLED"
+        #- Linux:
+        #    name: "Test | v3.11 | Linux"
+        #    v: "3.11"
+        #    mode: "TEST"
+        #    ray: "DISABLED"
         - Linux:
             name: "Test | Ray | v3.8 | Linux"
             v: "3.8"
@@ -53,7 +58,7 @@ workflows:
         #     name: "Test | v3.11 | Linux"
         #     v: "3.11"
         #     mode: "TEST"
-        #     ray: "DISABLED"
+        #     ray: "ENABLED"
         ################################
         ### NOTEBOOKS
         ################################
@@ -73,6 +78,11 @@ workflows:
             v: "3.10"
             mode: "NOTEBOOK"
             ray: "DISABLED"
+        #- Linux:
+        #    name: "Notebook | v3.11 | Linux"
+        #    v: "3.11"
+        #    mode: "NOTEBOOK"
+        #    ray: "DISABLED"            
         - Linux:
             name: "Notebook | Ray | v3.8 | Linux"
             v: "3.8"
@@ -147,7 +157,6 @@ jobs:
             pip install --upgrade pip
             source test_evadb/bin/activate
             pip install ".[dev]"
-            pip uninstall -y ray
 
       # Enable Ray (update evadb.yml file and install Ray package)
       - when:
@@ -159,7 +168,7 @@ jobs:
                 command: |
                   source test_evadb/bin/activate
                   python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['ray'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
-                  pip install ".[dev]"
+                  pip install ".[ray]"
 
       - run:
           name: Test and upload coverage report to coveralls
