--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,11 +78,11 @@ workflows:
             v: "3.10"
             mode: "NOTEBOOK"
             ray: "DISABLED"
-        #- Linux:
-        #    name: "Notebook | v3.11 | Linux"
-        #    v: "3.11"
-        #    mode: "NOTEBOOK"
-        #    ray: "DISABLED"            
+        - Linux:
+            name: "Notebook | v3.11 | Linux"
+            v: "3.11"
+            mode: "NOTEBOOK"
+            ray: "DISABLED"            
         - Linux:
             name: "Notebook | Ray | v3.8 | Linux"
             v: "3.8"
