--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ workflows:
             v: "3.10"
             mode: "TEST"
             ray: "DISABLED"
-        #- Linux:
-        #    name: "Test | v3.11 | Linux"
-        #    v: "3.11"
-        #    mode: "TEST"
-        #    ray: "DISABLED"
+        - Linux:
+            name: "Test | v3.11 | Linux"
+            v: "3.11"
+            mode: "TEST"
+            ray: "DISABLED"
         - Linux:
             name: "Test | Ray | v3.8 | Linux"
             v: "3.8"
