--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,8 +177,9 @@ jobs:
               equal: [ "3.11", << parameters.v >> ]
           steps:
             - run:
-                name: Install qdrant
+                name: Install Qdrant
                 command: |
+                  source test_evadb/bin/activate
                   pip install ".[qdrant]"
 
       - run:
