--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,11 +32,11 @@ workflows:
             v: "3.10"
             mode: "TEST"
             ray: "DISABLED"
-        #- Linux:
-        #    name: "Test | v3.11 | Linux"
-        #    v: "3.11"
-        #    mode: "TEST"
-        #    ray: "DISABLED"
+        - Linux:
+            name: "Test | v3.11 | Linux"
+            v: "3.11"
+            mode: "TEST"
+            ray: "DISABLED"
         - Linux:
             name: "Test | Ray | v3.8 | Linux"
             v: "3.8"
@@ -78,11 +78,11 @@ workflows:
             v: "3.10"
             mode: "NOTEBOOK"
             ray: "DISABLED"
-        #- Linux:
-        #    name: "Notebook | v3.11 | Linux"
-        #    v: "3.11"
-        #    mode: "NOTEBOOK"
-        #    ray: "DISABLED"            
+        - Linux:
+            name: "Notebook | v3.11 | Linux"
+            v: "3.11"
+            mode: "NOTEBOOK"
+            ray: "DISABLED"            
         - Linux:
             name: "Notebook | Ray | v3.8 | Linux"
             v: "3.8"
@@ -169,6 +169,18 @@ jobs:
                   source test_evadb/bin/activate
                   python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['ray'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
                   pip install ".[ray]"
+      
+      # Install qdrant only on versions < 3.11
+      - when:
+          condition:
+            not:
+              equal: [ "3.11", << parameters.v >> ]
+          steps:
+            - run:
+                name: Install Qdrant
+                command: |
+                  source test_evadb/bin/activate
+                  pip install ".[qdrant]"
 
       - run:
           name: Test and upload coverage report to coveralls
