--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,11 +205,7 @@ jobs:
                   - /home/circleci/.cache/torch/
                   - /home/circleci/.cache/gpt4all/
 
-<<<<<<< HEAD
-  LinuxPostgres:
-=======
   Postgres:
->>>>>>> circleci
     parameters:
       v:
         type: string
@@ -222,8 +218,8 @@ jobs:
     docker:
       # https://circleci.com/docs/circleci-images#language-image-variants
       - image: "cimg/python:<< parameters.v >>"
-        # environment:
-        #   DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
+        environment:
+          DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
       - image: "cimg/postgres:14.8"
         environment:
           POSTGRES_USER: postgres
@@ -248,16 +244,6 @@ jobs:
           command : dockerize -wait tcp://localhost:5432 -timeout 1m
 
       - run:
-<<<<<<< HEAD
-          name: Update the evadb yml file to postgres backend.
-          command: |
-            "python<< parameters.v >>" -m venv test_evadb
-             source test_evadb/bin/activate
-             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['backend']['store'] = "Postgres";f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
-
-      - run:
-=======
->>>>>>> circleci
           name: Install EvaDB package from GitHub repo with all dependencies
           command: |
             "python<< parameters.v >>" -m venv test_evadb
