--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,7 +254,7 @@ jobs:
           command: |
             "python<< parameters.v >>" -m venv test_evadb
              source test_evadb/bin/activate
-             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['backend']['store'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
+             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['backend']['store'] = "Postgres";f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
 
       - run:
           name: Install EvaDB package from GitHub repo with all dependencies
