--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,12 @@ workflows:
             name: "Test | Ray | v3.10 | Linux"
             v: "3.10"
             mode: "TEST"
-            ray: "ENABLED"            
+            ray: "ENABLED"
+        - LinuxPostgres:
+            name: "Test | v3.10 | Linux | Postgres"
+            v: "3.10"
+            mode: "TEST"
+            ray: "DISABLED" 
         # Ray does not work on 3.11
         # https://github.com/ray-project/ray/issues/33232
         # - Linux:
@@ -170,6 +175,106 @@ jobs:
                   python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['ray'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
                   pip install ".[ray]"
       
+      # Install qdrant only on versions < 3.11
+      - when:
+          condition:
+            not:
+              equal: [ "3.11", << parameters.v >> ]
+          steps:
+            - run:
+                name: Install Qdrant
+                command: |
+                  source test_evadb/bin/activate
+                  pip install ".[qdrant]"
+
+      - run:
+          name: Test and upload coverage report to coveralls
+          no_output_timeout: 30m # 30 minute timeout
+          command: |
+            source test_evadb/bin/activate
+            bash script/test/test.sh -m "<< parameters.mode >>"
+
+      # Enable cache save conditionally (to avoid empty cache in Notebooks)
+      - when:
+          condition: 
+            equal: [ TEST, << parameters.mode >> ]
+          steps:
+            - save_cache:
+                key: v1-model_cache-{{ checksum "setup.py" }}
+                paths:
+                  - /home/circleci/.cache/huggingface/
+                  - /home/circleci/.cache/torch/
+                  - /home/circleci/.cache/gpt4all/
+
+  LinuxPostgres:
+      parameters:
+      v:
+        type: string
+        default: "3.10"
+      mode:
+        type: string
+        default: "ALL"
+      ray:
+        type: string
+        default: "DISABLED"
+
+    resource_class: large
+    docker:
+      # https://circleci.com/docs/circleci-images#language-image-variants
+      - image: "cimg/python:<< parameters.v >>"
+        environment:
+          DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
+      - image: "cimg/postgres:14.8"
+        environment:
+          PGHOST: localhost
+          PGUSER: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: evadb
+    steps:
+
+      - checkout
+
+      - restore_cache:
+          keys:
+            - v1-model_cache-{{ checksum "setup.py" }}
+
+      - run:
+          name: install dockerize
+          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.6.1
+
+      - run:
+          name: Wait for db to run
+          command : dockerize -wait tcp://localhost:5432 -timeout 1m
+
+      - run:
+          name: Update the evadb yml file to postgres backend.
+          command: |
+            "python<< parameters.v >>" -m venv test_evadb
+             source test_evadb/bin/activate
+             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['backend']['store'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
+
+      - run:
+          name: Install EvaDB package from GitHub repo with all dependencies
+          command: |
+            pip install --upgrade pip
+            source test_evadb/bin/activate
+            pip install ".[dev]"
+
+      # Enable Ray (update evadb.yml file and install Ray package)
+      - when:
+          condition:
+            equal: [ ENABLED, << parameters.ray >> ]
+          steps:
+            - run:
+                name: Enable Ray setting in the config.yml file
+                command: |
+                  source test_evadb/bin/activate
+                  python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['ray'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
+                  pip install ".[ray]"
+
       # Install qdrant only on versions < 3.11
       - when:
           condition:
