--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,7 +255,7 @@ jobs:
           name: Update the evadb yml file to postgres backend.
           command: |
              source test_evadb/bin/activate
-             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['backend']['store'] = "Postgres";f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
+             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['backend']['use_sqlite'] = False;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
              pip install .
 
       # Install qdrant only on versions < 3.11
