--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,7 @@ jobs:
           PGUSER: postgres
           PGPASSWORD: password
           PGDATABASE: evadb
+          DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
       - image: "cimg/postgres:14.8"
         environment:
           POSTGRES_USER: postgres
