--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,17 +216,18 @@ jobs:
 
     resource_class: large
     docker:
-      # https://circleci.com/docs/circleci-images#language-image-variants
+      # https://circleci.com/docs/circleci-images#language-image-variants  DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
       - image: "cimg/python:<< parameters.v >>"
-          environment:
-            PG_HOST: localhost
-            PG_USER: postgres
-            # DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
+        environment:
+          PGHOST: localhost
+          PGUSER: postgres
+          PGPASSWORD: password
+          PGDATABASE: evadb
       - image: "cimg/postgres:14.8"
-          environment:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: password
-            POSTGRES_DB: evadb
+        environment:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: evadb
     steps:
 
       - checkout
