--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,6 +224,7 @@ jobs:
           PGPASSWORD: password
           PGDATABASE: evadb
           DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
+          POSTGRES_DB: evadb
       - image: "cimg/postgres:14.8"
         environment:
           POSTGRES_USER: postgres
@@ -259,7 +260,7 @@ jobs:
           name: Update the evadb yml file to postgres backend.
           command: |
              source test_evadb/bin/activate
-             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['backend']['use_sqlite'] = False;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
+             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['use_postgres_backend'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
              pip install .
 
       # Install qdrant only on versions < 3.11
