--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -261,7 +261,7 @@ jobs:
           command: |
              source test_evadb/bin/activate
              python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['use_postgres_backend'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
-             pip install .
+             pip install ".[postgres]"
 
       # Install qdrant only on versions < 3.11
       - when:
