--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,7 +260,7 @@ jobs:
           name: Update the evadb yml file to postgres backend.
           command: |
              source test_evadb/bin/activate
-             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['use_postgres_backend'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
+             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['use_postgres_backend'] = True;config_obj['core']['catalog_database_uri'] = 'postgresql://postgres:password@localhost:5432/evadb';f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
              pip install ".[postgres]"
 
       # Install qdrant only on versions < 3.11
