Text summarization benchmark with MindsDB and EvaDB

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -61,6 +61,11 @@ parts:
       - file: source/overview/docker
         title: Docker
 
+  - caption: Benchmarks
+    chapters:
+      - file: source/benchmarks/text_summarization.rst
+        title: Text Summarization
+
   - caption: Developer Guide
     chapters:
       - file: source/contribute/index
