--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,11 +173,13 @@ jobs:
                   source test_evadb/bin/activate
                   python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['experimental']['ray'] = True;f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
                   pip install ".[ray]"
+
+      # Install Ludwig also installs ray. However, the ray test will not involve ludwig now. 
+      - when:
           condition:
             equal: [ DISABLED, << parameters.ray >> ]
           steps:
             - run:
-                # Install Ludwig also installs ray. However, the ray test will not involve ludwig now. 
                 name: Install Ludwig
                 command: |
                   source test_evadb/bin/activate
