--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,10 +52,6 @@ workflows:
             v: "3.10"
             mode: "TEST"
             ray: "ENABLED"
-        - Postgres:
-            name: "Test | v3.10 | Linux | Postgres"
-            v: "3.10"
-            mode: "TEST"
         # Ray does not work on 3.11
         # https://github.com/ray-project/ray/issues/33232
         # - Linux:
@@ -63,6 +59,14 @@ workflows:
         #     v: "3.11"
         #     mode: "TEST"
         #     ray: "ENABLED"
+        ################################
+        ### INTEGRATIONS
+        ################################
+        ################################
+        - Postgres:
+            name: "Test Integration - Postgres | v3.10 | Linux"
+            v: "3.10"
+            mode: "INTEGRATION"
         ################################
         ### NOTEBOOKS
         ################################
@@ -218,16 +222,9 @@ jobs:
     docker:
       # https://circleci.com/docs/circleci-images#language-image-variants  DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
       - image: "cimg/python:<< parameters.v >>"
-        environment:
-          PGHOST: localhost
-          PGUSER: postgres
-          PGPASSWORD: password
-          PGDATABASE: evadb
-          DATABASE_URL: postgresql://postgres:password@localhost:5432/evadb
-          POSTGRES_DB: evadb
       - image: "cimg/postgres:14.8"
         environment:
-          POSTGRES_USER: postgres
+          POSTGRES_USER: eva
           POSTGRES_PASSWORD: password
           POSTGRES_DB: evadb
     steps:
@@ -239,13 +236,13 @@ jobs:
             - v1-model_cache-{{ checksum "setup.py" }}
 
       - run:
-          name: install dockerize
+          name: Install dockerize
           command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
           environment:
             DOCKERIZE_VERSION: v0.6.1
 
       - run:
-          name: Wait for db to run
+          name: Wait for DB to run
           command : dockerize -wait tcp://localhost:5432 -timeout 1m
 
       - run:
@@ -257,42 +254,10 @@ jobs:
             pip install ".[dev]"
 
       - run:
-          name: Update the evadb yml file to postgres backend.
+          name: Run integration tests
           command: |
              source test_evadb/bin/activate
-             python -c "import yaml;f = open('evadb/evadb.yml', 'r+');config_obj = yaml.load(f, Loader=yaml.FullLoader);config_obj['core']['catalog_database_uri'] = 'postgresql://postgres:password@localhost:5432/evadb';f.seek(0);f.write(yaml.dump(config_obj));f.truncate();"
-             pip install ".[postgres]"
-
-      # Install qdrant only on versions < 3.11
-      - when:
-          condition:
-            not:
-              equal: [ "3.11", << parameters.v >> ]
-          steps:
-            - run:
-                name: Install Qdrant
-                command: |
-                  source test_evadb/bin/activate
-                  pip install ".[qdrant]"
-
-      - run:
-          name: Test and upload coverage report to coveralls
-          no_output_timeout: 30m # 30 minute timeout
-          command: |
-            source test_evadb/bin/activate
-            bash script/test/test.sh -m "<< parameters.mode >>"
-
-      # Enable cache save conditionally (to avoid empty cache in Notebooks)
-      - when:
-          condition: 
-            equal: [ TEST, << parameters.mode >> ]
-          steps:
-            - save_cache:
-                key: v1-model_cache-{{ checksum "setup.py" }}
-                paths:
-                  - /home/circleci/.cache/huggingface/
-                  - /home/circleci/.cache/torch/
-                  - /home/circleci/.cache/gpt4all/
+             PYTHONPATH="." python -m pytest test/third_party_tests/test_native_executor.py -k test_should_run_simple_query_in_postgres
 
   Windows:
       executor: win/default
